--- a/index.html
+++ b/index.html
@@ -160,11 +160,10 @@
                 <h3>Plano Básico</h3>
                 <div class="price"><span>R$</span>90<span>/mês</span></div>
                 <div class="list">
-                    <p> <i class="fas fa-check"></i> Treinador </p>
                     <p> <i class="fas fa-check"></i> Exercícios de Cardio </p>
                     <p> <i class="fas fa-check"></i> Levantamento de Peso </p>
-                    <p> <i class="fas fa-check"></i> Planos Alimentares </p>
-                    <p> <i class="fas fa-check"></i> Acompanhamento de Resultados </p>
+                    <p> <i class="fas fa-check"></i> Musculação </p>
+        
                 </div>
                 <a href="#" class="btn">Quero</a>
             </div>
@@ -174,6 +173,7 @@
                 <div class="price"><span>R$</span>110<span>/mês</span></div>
                 <div class="list">
                     <p> <i class="fas fa-check"></i> Treinador </p>
+                    <p> <i class="fas fa-check"></i> Musculação </p>
                     <p> <i class="fas fa-check"></i> Exercícios de Cardio </p>
                     <p> <i class="fas fa-check"></i> Levantamento de Peso </p>
                     <p> <i class="fas fa-check"></i> Planos Alimentares </p>
